syntax = "proto3";

package crude.crude;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "crude/crude/params.proto";
import "crude/crude/resource.proto";

option go_package = "crude/x/crude/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/crude/crude/params";
  
  }
  
  // Queries a list of Resource items.
  rpc Resource    (QueryGetResourceRequest) returns (QueryGetResourceResponse) {
    option (google.api.http).get = "/crude/crude/resource/{id}";
  
  }
  rpc ResourceAll (QueryAllResourceRequest) returns (QueryAllResourceResponse) {
    option (google.api.http).get = "/crude/crude/resource";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryGetResourceRequest {
  uint64 id = 1;
}

message QueryGetResourceResponse {
  Resource Resource = 1 [(gogoproto.nullable) = false];
}

message QueryAllResourceRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllResourceResponse {
  repeated Resource                               Resource   = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

